;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-1.3.10:
  * enhancement: TRACE ... :REPORT {TRACE,NIL} now work as advertised in the
    documentation string (based on patch by Patrick Stein)
  * enhancement: support unboxed signed-word structure slots on x86, x86-64
    and ARM64. (lp#377616)
  * optimization: faster logical bit-array operations on multidimensional
    arrays.
  * optimization: better GC performance in the presence of many threads.
    (patch by Ilya Perminov, lp#1339924)
  * optimization: multiple-value-call is optimized with multiple argument
    forms, not just one. (lp#753803)
  * bug fix: MAKE-ALIEN-STRING returns the number of allocated bytes as a
    second value as advertised (reported by Johann 'Myrkraverk' Oskarsson)
  * bug fix: when TO-READTABLE is supplied to COPY-READTABLE, it will
    contain only the macros in FROM-READTABLE and no others. (lp#1631506)
  * enhancement: gencgc has been modified for x86-64 on Linux and macOS
    to a support mark-and-sweep as well as the traditional copying strategy.
    It is conceivable that some applications might be adversely affected.
    Please see ':immobile-space' in 'base-target-features.lisp-expr'
    for further details, and possible reasons to disable this feature.

changes in sbcl-1.3.10 relative to sbcl-1.3.9:
  * enhancement: more compact low-level error signaling code
  * enhancement: more compact encoding of cross-reference information
  * optimization: faster out of line fixnum-float comparisons.
  * optimization: filling a known simple-vector with a constant value
    is about as fast in unoptimized code as in code compiled with (SPEED 3),
    and the x86-64 implementation is able to use SSE instructions.
  * bug fix: correctly handle the case of a non-local exit within a function
    terminating the extent of dynamic-extent functions and variables in the
    presence of multiple-values (lp#1563127)