@@ -1,6 +1,7 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes relative to sbcl-1.3.10:
+  * minor incompatible change: SB-EXT:*INTEXP-MAXIMUM-EXPONENT* is removed.
   * enhancement: TRACE ... :REPORT {TRACE,NIL} now work as advertised in the
     documentation string (based on patch by Patrick Stein)
   * enhancement: support unboxed signed-word structure slots on x86, x86-64
